--- a/ConUHacks/static/index.html
+++ b/ConUHacks/static/index.html
@@ -23,6 +23,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="/static/lib/q.js"></script>
         <script src="/static/lib/audio.js"></script>
+        <script src="/static/lib/utils.js"></script>
         <script src="/static/main.js"></script>
     </body>
 </html>
