--- a/ConUHacks/static/index.html
+++ b/ConUHacks/static/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
-                        <img class="img-responsive" src="images/logo_2.jpg" alt="">
+                        <img class="img-responsive" src="images/logo_trans.png" alt="">
                         <img class="img-thumbnail" src="images/cupcake.png" alt="">
                     </div>
                 </div>
