--- a/ConUHacks/static/index.html
+++ b/ConUHacks/static/index.html
@@ -20,7 +20,7 @@
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
                         <img class="img-responsive" src="images/logo_trans.png" alt="">
-                        <img class="img-thumbnail" src="images/cupcake.png" alt="">
+                        <img class="img-thumbnail" src="images/cupcake.png" alt="" style="padding-left:50px;">
                     </div>
                 </div>
             </div>
