Abs path in resources

--- a/ConUHacks/static/index.html
+++ b/ConUHacks/static/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="/static/styles.css">
     </head>
     <body>
 
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
-                        <img class="img-responsive" src="./images/logo_trans.png" alt="">
+                        <img class="img-responsive" src="/static/images/logo_trans.png" alt="">
                         <img class="img-thumbnail" src="https://source.unsplash.com/collection/191435/800x600" alt="">
                     </div>
                 </div>
