--- a/ConUHacks/static/index.html
+++ b/ConUHacks/static/index.html
@@ -19,8 +19,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3">
-                        <img class="img-responsive" src="/static/images/logo_trans.png" alt="">
-                        <img class="img-thumbnail" src="https://source.unsplash.com/collection/191435/800x600" alt="">
+                        <img claiss="img-responsive" src="/static/images/logo_trans.png" alt="">
+                        <img id="food" class="img-thumbnail" src="https://source.unsplash.com/collection/191435/800x600" alt="">
                     </div>
                 </div>
             </div>
